--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,13 @@
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-document-normalizer@1.0.12/dist/ddn.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-label-recognizer@2.2.11/dist/dlr.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.0/dist/dbr.js"></script>
+
+  <style>
+    video {
+      transform: scaleX(-1);
+    }
+
+    </style>
 </head>
 <body>
   <script>
